--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
+.app-main {
+  max-width: 100%;
+  min-height: calc(100vh - 470px);
+  background-color: #81d7ea;
+  padding-top: 470px;
+  box-sizing: border-box;
   overflow-x: hidden;
 }
