--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 .app-main {
   max-width: 100%;
   min-height: calc(100vh - 470px);
