--- a/src/App.css
+++ b/src/App.css
@@ -235,7 +235,7 @@ html, body {
   min-width: 250px;
 }
 
-.calendar-section, .upload-section {
+.calendar-section, .upload-section, .download-section {
   background-color: #f0f0f0;
   padding: 24px;
   border-radius: 12px;
