--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,24 @@ header {
   background-color: lightcoral;
 }
 
+.header-user-info {
+  margin-left: auto;
+  margin-right: 16px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 16px;
+  font-size: 14px;
+  color: white;
+}
+
+.user-info-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+}
+
 .username, .phone-number {
   white-space: nowrap;
 }
